# vrc-embed

./: .gitignore  LICENSE  README.md  config.toml.example  loginhelper.py  pyproject.toml  requirements.txt  run-dev.sh
docker/: Dockerfile  README.md  config.toml.docker  docker-compose.yml.sample  run-app-docker.sh
fonts/: README.md
renders/: README.md
vrc_embed/: .image.py.kate-swp  __init__.py  app.py  button.py  cache.py  font.py  image.py  opts.py  render.py  utils.py  vrchat.py
vrc_embed/templates/: index.html
