[project]
name = "vrc-embed"
version = "0.1.0"
description = "Embed your VRChat profile on your website"
authors = [
    {name = "knuxify",email = "knuxify@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "quart (>=0.20.0,<0.21.0)",
    "vrchatapi (>=1.20.0,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "timeago (>=1.0.16,<2.0.0)",
    "pyotp (>=2.9.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "B", "D", "F"]
ignore = ["D212", "D203", "D205"]
