[project]
name = "vrc-embed"
version = "0.1.0"
description = "Embed your VRChat profile on your website"
authors = [
    {name = "knuxify",email = "knuxify@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
package-mode = false
requires-python = ">=3.9"
dependencies = [
    "quart",
    "vrchatapi",
    "redis",
    "pillow",
    "timeago",
    "pyotp"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "B", "D", "F"]
ignore = ["D212", "D203", "D205"]
