[project]
name = "vrc-embed"
version = "0.1.0"
description = "Embed your VRChat profile on your website"
authors = [
    {name = "knuxify",email = "knuxify@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
package-mode = false
requires-python = ">=3.9"
dependencies = [
    "aiofiles",
    "aiohttp",
    "filetype",
    "pillow",
    "pyotp",
    "quart",
    "quart-tasks",
    "redis",
    "taskgroup; python_version < '3.11'",
    "timeago",
    "toml; python_version < '3.11'",
    "vrchatapi",
    "wand",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "B", "D", "F", "I"]
ignore = ["D212", "D203", "D205", "D202"]
